--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "camelcase": "^5.3.1",
     "dateformat": "^3.0.3",
     "gh-pages": "^2.1.1",
     "halogen": "^0.2.0",
